k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  selector:
    app: result

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
